# sapiens2

./: .flake8  .gitignore  .shellcheckrc  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
docs/: MODEL_ZOO.md  NORMAL.md  POINTMAP.md  POSE.md  SEG.md
docs/train/: NORMAL.md  POINTMAP.md  POSE.md  SEG.md
sapiens/backbones/: sapiens.py  sapiens2.py
sapiens/backbones/standalone/: sapiens2.py
sapiens/dense/src/evaluators/: albedo_evaluator.py  normal_evaluator.py  pointmap_evaluator.py  seg_evaluator.py
sapiens/dense/src/visualizers/: albedo_visualizer.py  normal_visualizer.py  pointmap_visualizer.py  seg_visualizer.py
sapiens/dense/tools/: test.py  train.py
sapiens/dense/tools/deployment/: pytorch2torchscript.py  torch_optimization.py
sapiens/dense/tools/vis/: vis_albedo.py  vis_normal.py  vis_pointmap.py  vis_seg.py
sapiens/engine/: logger.py
sapiens/engine/datasets/: base_dataset.py  combined_dataset.py
sapiens/engine/datasets/data_preprocessors/: base_preprocessor.py  image_preprocessor.py
sapiens/engine/datasets/transforms/: common_transforms.py
sapiens/engine/evaluators/: base_evaluator.py  eval_collate.py
sapiens/engine/models/: base_model.py
sapiens/engine/optim/: lr_scheduler.py  optimizer.py
sapiens/engine/runners/: base_runner.py
sapiens/engine/visualizers/: base_visualizer.py
sapiens/pose/src/datasets/: keypoints308_3po_dataset.py  utils.py  (+5 more)
sapiens/pose/tools/: test.py  train.py
(+42 files in other folders)
